fixed spam calc bug;; fixed layout issue with trending links;; fixed ie layout

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -226,7 +226,7 @@ url("../img/bottom-line.png")
     float: left;
 }
 
-.date-filter .bar-chart .item span  {
+.date-filter .bar-chart div {
     font-size: 12px;
 }
 
@@ -617,16 +617,20 @@ li.ol-ad {
     display: block;
 }
 .urltrends {
-    width: 100%;
     white-space: nowrap;
     overflow: hidden;
+    width: 100%;
     float: left;
     padding: 20px 0px 0px 0px;
 }
-.link-header {
-    font-style: italic;
-    font-size: 0.8em;
-    font-weight: bold;
+.direct-link {
+    float: left;    
+    width: 90%;
+    white-space: nowrap;
+    overflow: hidden;    
+}
+.url-link {
+    padding-left: 5px;
 }
 .oneurl {
     padding-top: 9px;
